--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="manifest.json">
-    <title>Deti ToDo app</title>
+    <title>Deti To-Do Таsk</title>
     <style>
         :root {
             --bg: #f4f4f4;
@@ -626,4 +626,5 @@
 </script>
 </body>
 </html>
+
 
