--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>ToDo List</title>
+    <head>
+    <meta charset="UTF-8">
+    <title>To-Do Task</title>
+
+    <!-- PWA manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Цвят на адрес бара на мобилни браузъри -->
+    <meta name="theme-color" content="#28A745">
+
+    <!-- тук могат да си следват другите ти meta, link, style и т.н. --
 
     <style>
         :root {
@@ -817,4 +828,5 @@ loadTasks();
 
 
        
+
 
