--- a/index.html
+++ b/index.html
@@ -320,16 +320,17 @@
 /* MOBILE FIX */
 @media (max-width: 600px) {
     body {
-        padding: 0;
-        display: block;
+        padding: 0 !important;
+        display: block !important;
     }
 
     .container {
-        max-width: 100%;
-        width: 100%;
-        border-radius: 0;
+        max-width: 100% !important;
+        width: 100% !important;
+        border-radius: 0 !important;
     }
 }
+
 </style>
 </head>
 <body>
@@ -854,6 +855,7 @@ if ("serviceWorker" in navigator) {
 
 
        
+
 
 
 
