--- a/index.html
+++ b/index.html
@@ -316,20 +316,32 @@
     color: var(--text);
     font-size: 12px;
 }
-
 /* MOBILE FIX */
 @media (max-width: 600px) {
-    body {
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0 !important;
         padding: 0 !important;
+        overflow-x: hidden !important;
+    }
+
+    body {
         display: block !important;
+        justify-content: unset !important;
+        align-items: unset !important;
     }
 
     .container {
-        max-width: 100% !important;
         width: 100% !important;
+        max-width: 100% !important;
         border-radius: 0 !important;
+        padding: 20px !important;
+        box-sizing: border-box !important;
     }
 }
+
+
 
 </style>
 </head>
@@ -855,6 +867,7 @@ if ("serviceWorker" in navigator) {
 
 
        
+
 
 
 
