--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#28A745">
 
     <style>
-        :root {
+       :root {
     --bg: #f4f4f4;
     --card-eng: #ffffff;
     --text: #222;
@@ -37,30 +37,59 @@ body.dark {
     --border: #333;
 }
 
-/* ❗ FIX: Премахнат flex — Android 12 PWA го чупи */
+/* ===== DESKTOP DEFAULT (центриран лист) ===== */
 body {
     font-family: Arial, sans-serif;
     background: var(--bg);
     color: var(--text);
-    padding: 0;
     margin: 0;
+    padding: 30px 10px;
+    display: flex;
+    justify-content: center;
     transition: background 0.3s ease, color 0.3s ease;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
 }
 
-/* Центриране без flex */
 .container {
     background: var(--card-eng);
     padding: 20px;
     width: 100%;
-    max-width: none; /* ❗ FIX: Премахва ограничението 430px */
-    margin: 0 auto;
-    border-radius: 0; /* ❗ FIX: За fullscreen вид */
-    box-shadow: none; /* По‑добър вид за мобилно приложение */
+    max-width: 430px; /* ← лист в центъра */
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
     box-sizing: border-box;
 }
+
+/* ===== MOBILE / PWA FIX ===== */
+@media (max-width: 600px) {
+
+    body {
+        padding: 0;
+        margin: 0;
+        display: block;
+        overflow-x: hidden;
+    }
+
+    .container {
+        width: 100%;
+        max-width: 100%;
+        border-radius: 0;
+        padding: 20px;
+        margin: 0;
+        box-shadow: none;
+        box-sizing: border-box;
+    }
+
+    /* Увеличаваме шрифта за да не е дребен */
+    body, input, button, select, li {
+        font-size: 18px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+}
+
+/* ===== Останалите стилове (не са променяни) ===== */
 
 .header-row {
     display: flex;
@@ -321,26 +350,7 @@ input.edit-input {
     background: transparent;
     color: var(--text);
     font-size: 12px;
-}
-
-/* 📱 MOBILE FIX — 100% ширина на Android 12–14 */
-@media (max-width: 600px) {
-
-    html, body {
-        width: 100%;
-        height: 100%;
-        margin: 0 !important;
-        padding: 0 !important;
-        overflow-x: hidden !important;
-    }
-
-    .container {
-        width: 100% !important;
-        max-width: 100% !important;
-        border-radius: 0 !important;
-        padding: 20px !important;
-        box-sizing: border-box !important;
-    }
+   }
 }
 
 </style>
@@ -867,6 +877,7 @@ if ("serviceWorker" in navigator) {
 
 
        
+
 
 
 
